{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 100,
  "lineage": "3871a3f0-f386-bdbe-4d89-f75684f24ed0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tailscale",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:797495827785:security-group/sg-07caf2e9fbe418557",
            "description": "Security group for Tailscale Fargate Subnet Router",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07caf2e9fbe418557",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 41641,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 41641
              }
            ],
            "name": "terraform-20240517215725900000000001",
            "name_prefix": "terraform-",
            "owner_id": "797495827785",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0202ad38b46686dc5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:797495827785:security-group-rule/sgr-0eaa74fc1e18326f8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0eaa74fc1e18326f8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07caf2e9fbe418557",
            "security_group_rule_id": "sgr-0eaa74fc1e18326f8",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tailscale"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:797495827785:security-group-rule/sgr-0a7b42347b33e2b7b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 41641,
            "id": "sgr-0a7b42347b33e2b7b",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07caf2e9fbe418557",
            "security_group_rule_id": "sgr-0a7b42347b33e2b7b",
            "tags": null,
            "tags_all": {},
            "to_port": 41641
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tailscale"
          ]
        }
      ]
    }
  ]
}